# nextjs-fastapi-aws-sam-deployment

./: .gitignore  README.md  samconfig.toml  template.yaml
.github/workflows/: deploy.yaml
backend/: .env  Dockerfile.deploy  pyproject.toml
backend/backend/: communication_schema.py  main.py
backend/backend/gui/: gui.py  tabs.py
backend/backend/statistics/images/: polyline_overlay.py
backend/backend/statistics/plots/: average_heartrate_by_average_speed.py  cumulative_anything.py  github_style_activities.py  histogram_of_activity_time.py  pace_timeline.py
backend/backend/statistics/tables/: flagged_activities.py  top_hundred.py
backend/backend/statistics/trivia/: min_max_summary_trivia.py  summary_trivia.py  trivia.py
backend/backend/statistics/utils/: average_speed_utils.py
backend/backend/tabs/: image_tab.py  plot_tabs.py  table_tab.py  tabs.py  trivia_tabs.py
backend/backend/utils/: dynamodb.py  environment_variables.py  routes.py  s3.py
backend/tests/: test_example.py
backend/tests/factories/: activity_factories.py  athlete_factories.py
backend/tests/fixtures/: activity_fixtures.py  athlete_fixtures.py
backend/tests/test_dynamodb/: test_dynamodb.py
backend/tests/test_s3/: test_s3.py
frontend/: .env.prod  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: Spinner.tsx  plot_container.tsx  splash_page.tsx  strava_login_button.tsx
frontend/app/components/side_bar/: side_bar.tsx
frontend/app/home/: layout.tsx  page.tsx
frontend/app/home/[key]/: page.tsx
(+1 files in other folders)
